--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "My Portfolio",
   "main": "index.js",
   "scripts": {
+    "start": "node server/server.js",
     "test": "npm test"
   },
   "repository": {
